# not-so-private-transfers

./: Cargo.toml  README.md
.github/workflows/: test.yml
cache/: solidity-files-cache.json
contracts/: foundry.toml
contracts/script/: Protocol.s.sol
contracts/src/: Deployer.sol  Wallet.sol
contracts/src/interface/: IDeployer.sol
contracts/test/: Deployer.t.sol  Wallet.t.sol
lib/: Cargo.toml
lib/src/: config.rs  lib.rs  relay.rs
