[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true }
serde_json = "1.0.145"
thiserror = "2.0.17"

[dev-dependencies]
hex = "0.4.3"
alloy = { workspace = true, features = ["node-bindings", "getrandom"] }
tokio = { version = "1.41.1", features = ["full"] }